<resources>
    <string name="app_name">MapTest</string>
    <string name="dev_mode_on">Dev Mode is ON</string>
    <string name="dev_mode_off">Dev Mode is OFF</string>
    <string name="monitoring_on">Navigation is ON</string>
    <string name="monitoring_off">Navigation is OFF</string>
    <string name="debug_file_success">Debug Operation Successful</string>
    <string name="debug_file_failure">File debug operation failed</string>
    <string name="vibrate_distance">Select the min. distance before a turn when band vibrates</string>
    <string name="threshold">Current Threshold distance :</string>
    <string name="status0">No device connected</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_scan">Find device</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="disconnect_band">Disconnect Band</string>
    <string name="connect_band">Connect Band</string>
    <string name="status_doScan">Scan/connect to devices</string>
    <string name="vibrate_band">Vibrate</string>
    <string name="vibrate_on_time">on time(milli)</string>
    <string name="vibrate_off_time">off time(millis)</string>
    <string name="vibrate_repeat">Repeat Pattern</string>
    <string name="vibrate_led">LED on/off</string>
    <string name="devc">Developed by jashgopani</string>

    <string name="status_disconnected">DISCONNECTED</string>
    <string name="status_connected">CONNECTED</string>
    <string name="status_paired">PAIRED</string>
    <string name="status_charging">CHARGING</string>
    <string name="status_discharging">DISCHARGING</string>


</resources>
