<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:debug="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statustv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="debug"
        android:textAlignment="center"
        android:textSize="32dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">


        <ToggleButton
            android:id="@+id/toggleMonitoringBtn"
            android:layout_width="0dp"
            android:textOn="@string/monitoring_on"
            android:textOff="@string/monitoring_off"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Start Service"
            android:textAlignment="center" />


        <ToggleButton
            android:id="@+id/toggleDevModeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:textOff="@string/dev_mode_off"
            android:textOn="@string/dev_mode_on"
            android:textAlignment="center" />

        <Button
            android:id="@+id/debugFileBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="Test File Operation"
            android:textAlignment="center" />


        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/ic_launcher_foreground"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="The icon csv is stored at Internal Storage/Android/com.example.MapTest/PixelData.csv" />
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />
    </ScrollView>


</LinearLayout>